Still some whitespace issues, but the cells are centered and don't wrap.

--- a/ReactMinesweeper/application.css
+++ b/ReactMinesweeper/application.css
@@ -15,31 +15,29 @@ p {
 }
 
 .board-row {
-  /*width: 250px;*/
-  /*margin: 0 auto;*/
+  width: 100%;
   overflow: auto;
   white-space: nowrap;
-
   display: inline-block;
 }
 
-.board-row:after {
+/*.board-row:after {
   content: "";
   clear: both;
   display: block;
-}
+}*/
 
 .board-tile {
   height: 20px;
   width: 20px;
   background: lightgray;
-  /*float: left;*/
 
   display: inline-block;
 
   border-style: outset;
   border-width: 2px;
   line-height: 20px;
+
   padding-left: 3px;
   font-size: 14px;
   font-weight: bold;
